--- a/assets/linearpower/lang/en.json
+++ b/assets/linearpower/lang/en.json
@@ -1,21 +1,38 @@
 ﻿{
-    "linearpower:block-sawmill-birch-*": "Sawmill (Birch)",
-    "linearpower:block-sawmill-oak-*": "Sawmill (Oak)",
-    "linearpower:block-sawmill-maple-*": "Sawmill (Maple)",
-    "linearpower:block-sawmill-pine-*": "Sawmill (Pine)",
-    "linearpower:block-sawmill-acacia-*": "Sawmill (Acacia)",
-    "linearpower:block-sawmill-kapok-*": "Sawmill (Kapok)",
-    "linearpower:block-sawmill-baldcypress-*": "Sawmill (Baldcypress)",
-    "linearpower:block-sawmill-larch-*": "Sawmill (Larch)",
-    "linearpower:block-sawmill-redwood-*": "Sawmill (Redwood)",
-    "linearpower:block-sawmill-ebony-*": "Sawmill (Ebony)",
-    "linearpower:block-sawmill-walnut-*": "Sawmill (Walnut)",
-    "linearpower:block-sawmill-purpleheart-*": "Sawmill (Purpleheart)",
-    "linearpower:block-sawmill-aged-*": "Sawmill (Aged)",
-    "linearpower:block-slidercrank-*": "Slider-crank",
-    "linearpower:notValidForSawing": "The item can't be processed in the sawmill",
-    "linearpower:requiresSaw": "Please add a saw before trying to add items",
-
-    "linearpower:linearpowerguide-title": "Game mechanic: Linear mechanical power",
-    "linearpower:linearpowerguide-text": "<strong>Linear mechanical power</strong><br><i>Power transmitted linearly? Madness!</i><br><br>Start by crafting a <strong><a href=\"handbook://block-linearpower:slidercrank-north\">slider-crank</a></strong> and attach it to any existing mechanical power connector.<br>Craft a <strong><a href=\"handbook://block-linearpower:sawmill-birch-north\">sawmill</a></strong> and place it at one of the sides of the slider-crank.<br>Add a <strong><a href=\"handbook://item-saw-copper\">saw</a></strong> of any material to the sawmill.<br><br>You can now add any block or item that is the only ingredient a crafting recipe together with a saw and it will be automatically processed according to the recipe.<br><br>You can replace the current saw by interacting with the sawmill while holding another saw in your hands.<br><br>You can remove the currently processing item by interacting with the sawmill with empty hands."
+  "linearpower:generic-nothing": "Nothing",
+  "linearpower:generic-none": "None",
+  "linearpower:block-sawmill-birch-*": "Sawmill (Birch)",
+  "linearpower:block-sawmill-oak-*": "Sawmill (Oak)",
+  "linearpower:block-sawmill-maple-*": "Sawmill (Maple)",
+  "linearpower:block-sawmill-pine-*": "Sawmill (Pine)",
+  "linearpower:block-sawmill-acacia-*": "Sawmill (Acacia)",
+  "linearpower:block-sawmill-kapok-*": "Sawmill (Kapok)",
+  "linearpower:block-sawmill-baldcypress-*": "Sawmill (Baldcypress)",
+  "linearpower:block-sawmill-larch-*": "Sawmill (Larch)",
+  "linearpower:block-sawmill-redwood-*": "Sawmill (Redwood)",
+  "linearpower:block-sawmill-ebony-*": "Sawmill (Ebony)",
+  "linearpower:block-sawmill-walnut-*": "Sawmill (Walnut)",
+  "linearpower:block-sawmill-purpleheart-*": "Sawmill (Purpleheart)",
+  "linearpower:block-sawmill-aged-*": "Sawmill (Aged)",
+  "linearpower:block-sawmill-generic-*": "Sawmill (Wood)",
+  "linearpower:block-slidercrank-birch-*": "Slider-crank (Birch)",
+  "linearpower:block-slidercrank-oak-*": "Slider-crank (Oak)",
+  "linearpower:block-slidercrank-maple-*": "Slider-crank (Maple)",
+  "linearpower:block-slidercrank-pine-*": "Slider-crank (Pine)",
+  "linearpower:block-slidercrank-acacia-*": "Slider-crank (Acacia)",
+  "linearpower:block-slidercrank-kapok-*": "Slider-crank (Kapok)",
+  "linearpower:block-slidercrank-baldcypress-*": "Slider-crank (Baldcypress)",
+  "linearpower:block-slidercrank-larch-*": "Slider-crank (Larch)",
+  "linearpower:block-slidercrank-redwood-*": "Slider-crank (Redwood)",
+  "linearpower:block-slidercrank-ebony-*": "Slider-crank (Ebony)",
+  "linearpower:block-slidercrank-walnut-*": "Slider-crank (Walnut)",
+  "linearpower:block-slidercrank-purpleheart-*": "Slider-crank (Purpleheart)",
+  "linearpower:block-slidercrank-aged-*": "Slider-crank (Aged)",
+  "linearpower:block-slidercrank-generic-*": "Slider-crank (Wood)",
+  "linearpower:notValidForSawing": "The item can't be processed in the sawmill",
+  "linearpower:requiresSaw": "Please add a saw before trying to add items",
+  "linearpower:sawInfo": "Saw: {0}",
+  "linearpower:sawingInfo": "Sawing: {0}",
+  "linearpower:linearpowerguide-title": "Game mechanic: Linear mechanical power",
+  "linearpower:linearpowerguide-text": "<strong>Linear mechanical power</strong><br><i>Power transmitted linearly? Madness!</i><br><br>Start by crafting a <strong><a href=\"handbook://block-linearpower:slidercrank-birch-north\">slider-crank</a></strong> and attach it to any existing mechanical power connector.<br>Craft a <strong><a href=\"handbook://block-linearpower:sawmill-birch-north\">sawmill</a></strong> and place it at one of the sides of the slider-crank.<br>Add a <strong><a href=\"handbook://item-saw-copper\">saw</a></strong> of any material to the sawmill.<br><br>You can now add any block or item that is the only ingredient of a crafting recipe together with a saw (used as tool) and it will be automatically processed according to the recipe.<br><br>You can replace the current saw by interacting with the sawmill while holding another saw in your hands.<br><br>You can remove the currently processing item by interacting with the sawmill with empty hands."
 }
