Added variants for Floral Regions wood types Added compatibility for Immersive Wood Sawing Added support for Vanilla Variant axles (and any item with similar item code) in slider-crank recipe

--- a/assets/linearpower/lang/en.json
+++ b/assets/linearpower/lang/en.json
@@ -34,5 +34,36 @@
   "linearpower:sawInfo": "Saw: {0}",
   "linearpower:sawingInfo": "Sawing: {0}",
   "linearpower:linearpowerguide-title": "Game mechanic: Linear mechanical power",
-  "linearpower:linearpowerguide-text": "<strong>Linear mechanical power</strong><br><i>Power transmitted linearly? Madness!</i><br><br>Start by crafting a <strong><a href=\"handbook://block-linearpower:slidercrank-birch-north\">slider-crank</a></strong> and attach it to any existing mechanical power connector.<br>Craft a <strong><a href=\"handbook://block-linearpower:sawmill-birch-north\">sawmill</a></strong> and place it at one of the sides of the slider-crank.<br>Add a <strong><a href=\"handbook://item-saw-copper\">saw</a></strong> of any material to the sawmill.<br><br>You can now add any block or item that is the only ingredient of a crafting recipe together with a saw (used as tool) and it will be automatically processed according to the recipe.<br><br>You can replace the current saw by interacting with the sawmill while holding another saw in your hands.<br><br>You can remove the currently processing item by interacting with the sawmill with empty hands."
+  "linearpower:linearpowerguide-text": "<strong>Linear mechanical power</strong><br><i>Power transmitted linearly? Madness!</i><br><br>Start by crafting a <strong><a href=\"handbook://block-linearpower:slidercrank-generic-north\">slider-crank</a></strong> and attach it to any existing mechanical power connector.<br>Craft a <strong><a href=\"handbook://block-linearpower:sawmill-generic-north\">sawmill</a></strong> and place it at one of the sides of the slider-crank.<br>Add a <strong><a href=\"handbook://item-saw-copper\">saw</a></strong> of any material to the sawmill.<br><br>You can now add any block or item that is the only ingredient of a crafting recipe together with a saw (used as tool) and it will be automatically processed according to the recipe.<br><br>You can replace the current saw by interacting with the sawmill while holding another saw in your hands.<br><br>You can remove the currently processing item by interacting with the sawmill with empty hands.",
+
+  "linearpower:block-sawmill-dacrydiumcupressinum-*": "Sawmill (Rimu)",
+  "linearpower:block-sawmill-nothofagusmenziesii-*": "Sawmill (Tawhai)",
+  "linearpower:block-sawmill-podocarpustotara-*": "Sawmill (Totara)",
+  "linearpower:block-sawmill-araucariaheterophylla-*": "Sawmill (Norfolk Island Pine)",
+  "linearpower:block-slidercrank-dacrydiumcupressinum-*": "Slider-crank (Rimu)",
+  "linearpower:block-slidercrank-nothofagusmenziesii-*": "Slider-crank (Tawhai)",
+  "linearpower:block-slidercrank-podocarpustotara-*": "Slider-crank (Totara)",
+  "linearpower:block-slidercrank-araucariaheterophylla-*": "Slider-crank (Norfolk Island Pine)",
+
+  "linearpower:block-sawmill-afrocarpusfalcatus-*": "Sawmill (Common yellowwood)",
+  "linearpower:block-sawmill-searsialancea-*": "Sawmill (Karee)",
+  "linearpower:block-slidercrank-afrocarpusfalcatus-*": "Slider-crank (Common yellowwood)",
+  "linearpower:block-slidercrank-searsialancea-*": "Slider-crank (Karee)",
+
+  "linearpower:block-sawmill-lysilomalatisiliquum-*": "Sawmill (False Tamarind)",
+  "linearpower:block-slidercrank-lysilomalatisiliquum-*": "Slider-crank (False Tamarind)",
+
+  "linearpower:block-sawmill-eucalyptuscamaldulensis-*": "Sawmill (Red river gum)",
+  "linearpower:block-sawmill-corymbiaaparrerinja-*": "Sawmill (Ghost gum)",
+  "linearpower:block-slidercrank-eucalyptuscamaldulensis-*": "Slider-crank (Red river gum)",
+  "linearpower:block-slidercrank-corymbiaaparrerinja-*": "Slider-crank (Ghost gum)",
+
+  "linearpower:block-sawmill-ginkgobiloba-*": "Sawmill (Ginkgo)",
+  "linearpower:block-slidercrank-ginkgobiloba-*": "Slider-crank (Ginkgo)",
+
+  "linearpower:block-sawmill-populusalba-*": "Sawmill (White Poplar)",
+  "linearpower:block-sawmill-taxusbaccata-*": "Sawmill (European Yew)",
+  "linearpower:block-slidercrank-populusalba-*": "Slider-crank (White Poplar)",
+  "linearpower:block-slidercrank-taxusbaccata-*": "Slider-crank (European Yew)"
+
 }
